--- a/androidApp/src/main/res/layout/list.xml
+++ b/androidApp/src/main/res/layout/list.xml
@@ -13,6 +13,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            app:paddingTopSystemWindowInsets="@{true}"
+            app:paddingBottomSystemWindowInsets="@{true}"
             tools:visibility="visible" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -20,6 +22,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
+            android:clipToPadding="false"
+            app:paddingTopSystemWindowInsets="@{true}"
+            app:paddingBottomSystemWindowInsets="@{true}"
             tools:listitem="@layout/item_genre"
             tools:visibility="visible" />
     </FrameLayout>
