--- a/androidApp/src/main/res/layout/item_artist.xml
+++ b/androidApp/src/main/res/layout/item_artist.xml
@@ -22,12 +22,13 @@
         <widget.RatioImageView
             android:id="@+id/imgv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:riv_dimensionRatio="1:1"
             app:image="@{item.model.pictureMedium}"
             app:requestManager="@{rm}"
+            app:shapeAppearance="?attr/shapeAppearanceCircleComponent"
             tools:src="@tools:sample/avatars" />
 
         <TextView
@@ -35,10 +36,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/space_tiny"
             android:gravity="center"
             android:text="@{item.model.name}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/materialCardView"
