--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="overlay">#66000000</color>
 
     <color name="transparent">#00000000</color>
-    <color name="scrim_dark">#B3000000</color>
+    <color name="scrim_dark">#000000</color>
     <color name="status_bar_scrim">@color/scrim_dark</color>
     <color name="nav_bar_scrim">@color/scrim_dark</color>
 </resources>
