--- a/androidApp/src/main/res/layout/list.xml
+++ b/androidApp/src/main/res/layout/list.xml
@@ -5,7 +5,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground">
 
         <ProgressBar
             android:id="@+id/progressBar"
