Toolbar - add shadow

--- a/androidApp/src/main/res/layout/fragment_list.xml
+++ b/androidApp/src/main/res/layout/fragment_list.xml
@@ -9,11 +9,17 @@
         android:background="?android:attr/colorBackground"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolBar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:paddingTopSystemWindowInsets="@{true}" />
+            android:background="?android:attr/colorBackground">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:paddingTopSystemWindowInsets="@{true}" />
+        </com.google.android.material.appbar.AppBarLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
