--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="album_item_size">64dp</dimen>
+<!--    fixme calculate in code - not here-->
+    <dimen name="artist_detail_title_margin_bottom">84dp</dimen>
 </resources>
