Feature/update design (#4)
* Update status bar and nav bar color

* Genre - add header

* Fix not run animation

* Artist item - change to circle shape

* Update the style - make status bar and nav bar opaque

* Artist list - add toolbar
Update fragment animation

* Toolbar - add shadow

* Artist detail - update design

Co-authored-by: Phong Huynh <phonghdt@vng.com.vn>

--- a/androidApp/src/main/res/layout/list.xml
+++ b/androidApp/src/main/res/layout/list.xml
@@ -5,7 +5,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground">
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -13,6 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            app:paddingTopSystemWindowInsets="@{true}"
+            app:paddingBottomSystemWindowInsets="@{true}"
             tools:visibility="visible" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -20,6 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
+            android:clipToPadding="false"
+            app:paddingTopSystemWindowInsets="@{true}"
+            app:paddingBottomSystemWindowInsets="@{true}"
             tools:listitem="@layout/item_genre"
             tools:visibility="visible" />
     </FrameLayout>
