--- a/androidApp/src/main/res/values-night/colors.xml
+++ b/androidApp/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--nav_bar_scrim follows status_bar_scrim by default-->
+    <color name="colorSurface">#0CFFFFFF</color>
 </resources>
