--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#FF5722</color>
     <color name="overlay">#66000000</color>
+    <color name="colorSurface">#0D000000</color>
 
     <color name="transparent">#00000000</color>
     <color name="scrim_dark">#000000</color>
