Mini player - created

--- a/androidApp/src/main/res/layout/fragment_list.xml
+++ b/androidApp/src/main/res/layout/fragment_list.xml
@@ -23,8 +23,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:paddingBottomSystemWindowInsets="@{true}">
+            android:layout_height="match_parent">
 
             <ProgressBar
                 android:id="@+id/progressBar"
