--- a/androidApp/src/main/res/layout/fragment_artist_detail.xml
+++ b/androidApp/src/main/res/layout/fragment_artist_detail.xml
@@ -23,7 +23,8 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_behavior=".util.DisableAppbarScrollingBehavior">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbar"
