Mini player - update gradient color

--- a/androidApp/src/main/res/layout/fragment_mini_player.xml
+++ b/androidApp/src/main/res/layout/fragment_mini_player.xml
@@ -32,7 +32,7 @@
             android:fontFamily="sans-serif-medium"
             android:maxLines="1"
             android:text="@{track.model.name}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/tvArtist"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +51,8 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{track.artist.model.name}"
+            android:layout_marginTop="@dimen/space_vertical_text_to_text"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
