--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 
     <color name="primary_white">#ffffff</color>
     <color name="black_20">#33000000</color>
+    <color name="white">#ffffff</color>
 </resources>
