--- a/androidApp/src/main/res/xml/fragment_player_scene.xml
+++ b/androidApp/src/main/res/xml/fragment_player_scene.xml
@@ -6,8 +6,10 @@
         app:constraintSetEnd="@id/end"
         app:constraintSetStart="@+id/start"
         app:duration="@android:integer/config_shortAnimTime"
-        app:motionInterpolator="easeInOut">
+        app:motionInterpolator="easeIn">
 
+<!--        slow down drag animation-->
+<!--        https://stackoverflow.com/questions/58123685/slowing-down-motionlayout-animation-on-swipe-->
         <OnSwipe
             app:dragDirection="dragUp"
             app:maxVelocity="30"
