Player - add toolbar

--- a/androidApp/src/main/res/layout/fragment_player.xml
+++ b/androidApp/src/main/res/layout/fragment_player.xml
@@ -92,11 +92,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/player_background_view">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.wind.deezerkmp.androidApp.ui.widget.NonClickableToolbar
                 android:id="@+id/toolBar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
