Player - add collapse button in toolbar

--- a/androidApp/src/main/res/layout/fragment_player.xml
+++ b/androidApp/src/main/res/layout/fragment_player.xml
@@ -96,6 +96,7 @@
                 android:id="@+id/toolBar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:paddingTopSystemWindowInsets="@{true}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
