--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -4,6 +4,6 @@
 <!--    fixme calculate in code - not here-->
     <dimen name="artist_detail_title_margin_bottom">84dp</dimen>
     <dimen name="height_mini_player">52dp</dimen>
-    <dimen name="img_art_full_margin_top">60dp</dimen>
+    <dimen name="img_art_full_margin_top">@dimen/space_normal</dimen>
     <dimen name="artist_name_full_margin_top">40dp</dimen>
 </resources>
